print results, comments, language

--- a/index.html
+++ b/index.html
@@ -38,10 +38,21 @@
                 <button onclick="cargarArchivo()">Cargar Archivo Seleccionado</button>
                 <td>
         </tr>
+        <tr>
+                <td colspan="3">
+                    <h1>Resultados:</h1>
+                </td>
+            </tr>
+        <tr>
+            <td colspan="3">
+                <span id="resultados"></span>
+            </td>
+        </tr>
 
     </table>
 
 
 </body>
 <script src="main.js"></script>
+
 </html>
